[package]
name = "c2kep"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-native-tls = "0.3"
url = "2.2"
prost = "0.13.3"
rand = "0.8.5"
base64 = "0.13.0"
hyper = "0.14"
opcua = { version = "0.12.0", features = ["client"] }
pico-args = "0.5"
opcua-client = "0.9.1"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"




[build-dependencies]
prost-build = "0.13.3"
